# Google_Prep

./: .gitignore  README.md  _deep_analysis_test.txt  _e2e_output.md  _gradio_caps.txt  extract_resume.py  job_automation.db
Job_Finder_using_strands/: .env.example  .gitignore  README.md  requirements.txt
mobile_apps/agentic_job_finder_mobile_latest/: .env.example  .gitignore  README.md  pyproject.toml
mobile_apps/agentic_job_finder_mobile_latest/android/: build.gradle.kts  settings.gradle.kts
mobile_apps/agentic_job_finder_mobile_latest/android/app/: build.gradle.kts
mobile_apps/agentic_job_finder_mobile_latest/android/app/src/main/: AndroidManifest.xml
mobile_apps/agentic_job_finder_mobile_latest/android/app/src/main/java/com/vc/jobfinder/: JobFinderApp.kt
mobile_apps/agentic_job_finder_mobile_latest/android/app/src/main/java/com/vc/jobfinder/data/local/: SettingsStore.kt
mobile_apps/agentic_job_finder_mobile_latest/android/app/src/main/java/com/vc/jobfinder/di/: AppModule.kt
mobile_apps/agentic_job_finder_mobile_latest/android/app/src/main/java/com/vc/jobfinder/ui/: JobFinderRoot.kt  Nav.kt
mobile_apps/agentic_job_finder_mobile_latest/config/: companies.yaml  settings.yaml
mobile_apps/agentic_job_finder_mobile_latest/data/: competitions_cache.json  pipeline_state.json
mobile_apps/agentic_job_finder_mobile_latest/src/: cli.py  config.py  orchestrator.py  pipeline_state.py  scheduler.py
mobile_apps/agentic_job_finder_mobile_latest/src/agents/: applicator.py  competition.py  matcher.py  resume_parser.py  scraper.py
mobile_apps/agentic_job_finder_mobile_latest/src/api/: deps.py  main.py  runs.py
mobile_apps/agentic_job_finder_mobile_latest/src/api/routes/: apply.py  competitions.py  matches.py  pipeline.py  resume.py
mobile_apps/agentic_job_finder_mobile_latest/src/competitions/: __init__.py  _company_matcher.py  hackerearth.py  hackerrank.py  kaggle.py  unstop.py
mobile_apps/agentic_job_finder_mobile_latest/src/schemas/: __init__.py  apply_packet.py  competition.py  job.py  match.py  resume.py
mobile_apps/agentic_job_finder_mobile_latest/src/scrapers/: __init__.py  generic.py  greenhouse.py  lever.py  workday.py
mobile_apps/agentic_job_finder_mobile_latest/src/tools/: __init__.py
mobile_apps/agentic_job_finder_mobile_latest/tests/: test_smoke.py
mobile_apps/leetcode_checker/app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
(+584 files in other folders)
