[project]
name = "job-finder"
version = "0.1.0"
description = "Agentic job-search assistant — Strands SDK + Gemini, FastAPI backend, Android client"
requires-python = ">=3.10"
dependencies = [
    "strands-agents[gemini]>=0.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "websockets>=13.0",
    "pydantic>=2.9.0",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.48.0",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "tenacity>=9.0.0",
    "rich>=13.9.0",
    "typer>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
